--- a/index.html
+++ b/index.html
@@ -7,15 +7,85 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Шапка сайта-->
     <header>
+        <a href="/index.html">
+        WebStudio
+        </a>
         <nav>
-            <ul>
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-                <li><a href="">link</a></li>
-            </ul>
+        <ul>
+            <li><a href="">Студия</a></li>
+            <li><a href="">Портфолио</a></li>
+            <li><a href="">Контакты</a></li>
+        </ul>
         </nav>
-
+        <a href="mail:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:380961111111">+38 096 111 11 11</a>
     </header>
+    <main>
+        <section>
+            <ul>
+                <h1 lang="ru">Эффективные решения для вашего бизнеса</h1>
+                <button type="button">Заказать услугу</button>
+            </ul>
+        </section>
+        <section>
+            <!--Наши сильные качества-->
+            <h2>Наши сильные качества</h2>
+            <ul>
+                <li>
+                    <h3 lang="ru">Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3 lang="ru">Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3 lang="ru">Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3 lang="ru">Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <h2 lang="ru">Чем мы занимаемся</h2>
+                <img src="./img/image.jpg" alt="" width="370">
+                <img src="./img/image-2.jpg" alt="" width="370">
+                <img src="./img/image-3.jpg" alt="" width="370">
+            </ul>
+        </section>
+        <section>
+            <!--Наша Команда-->
+            <h2 lang="ru">Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./img/foto.jpg" alt="" width="270">
+                    <h3 lang="ru">Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./img/foto1.jpg" alt="" width="270">
+                    <h3 lang="ru">Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./img/foto2.jpg" alt="" width="270">
+                    <h3 lang="ru">Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./img/foto3.jpg" alt="" width="270">
+                    <h3 lang="ru">Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
