--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
     </header>
     <main>
         <section>
-            <ul>
                 <h1 lang="ru">Эффективные решения для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
-            </ul>
         </section>
         <section>
             <!--Наши сильные качества-->
@@ -52,34 +50,32 @@
             </ul>
         </section>
         <section>
-            <ul>
                 <h2 lang="ru">Чем мы занимаемся</h2>
-                <img src="./img/image.jpg" alt="" width="370">
-                <img src="./img/image-2.jpg" alt="" width="370">
-                <img src="./img/image-3.jpg" alt="" width="370">
-            </ul>
+                <img src="./img/image.jpg" alt="человек печатает" width="370">
+                <img src="./img/image-2.jpg" alt="человек с телефоном за компютером" width="370">
+                <img src="./img/image-3.jpg" alt="человек с планшетом" width="370">
         </section>
         <section>
             <!--Наша Команда-->
             <h2 lang="ru">Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/foto.jpg" alt="" width="270">
+                    <img src="./img/foto.jpg" alt="фото дизайнера" width="270">
                     <h3 lang="ru">Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./img/foto1.jpg" alt="" width="270">
+                    <img src="./img/foto1.jpg" alt="фото девелопера" width="270">
                     <h3 lang="ru">Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./img/foto2.jpg" alt="" width="270">
+                    <img src="./img/foto2.jpg" alt="фото маркетолога" width="270">
                     <h3 lang="ru">Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/foto3.jpg" alt="" width="270">
+                    <img src="./img/foto3.jpg" alt="фото ui дизайнера" width="270">
                     <h3 lang="ru">Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
