--- a/index.html
+++ b/index.html
@@ -51,37 +51,46 @@
         </section>
         <section>
                 <h2 lang="ru">Чем мы занимаемся</h2>
-                <img src="./img/image.jpg" alt="человек печатает" width="370">
-                <img src="./img/image-2.jpg" alt="человек с телефоном за компютером" width="370">
-                <img src="./img/image-3.jpg" alt="человек с планшетом" width="370">
+                <img src="./images/image.jpg" alt="человек печатает" width="370">
+                <img src="./images/image-2.jpg" alt="человек с телефоном за компютером" width="370">
+                <img src="./images/image-3.jpg" alt="человек с планшетом" width="370">
         </section>
         <section>
             <!--Наша Команда-->
             <h2 lang="ru">Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/foto.jpg" alt="фото дизайнера" width="270">
+                    <img src="./images/foto.jpg" alt="фото дизайнера" width="270">
                     <h3 lang="ru">Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./img/foto1.jpg" alt="фото девелопера" width="270">
+                    <img src="./images/foto1.jpg" alt="фото девелопера" width="270">
                     <h3 lang="ru">Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./img/foto2.jpg" alt="фото маркетолога" width="270">
+                    <img src="./images/foto2.jpg" alt="фото маркетолога" width="270">
                     <h3 lang="ru">Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/foto3.jpg" alt="фото ui дизайнера" width="270">
+                    <img src="./images/foto3.jpg" alt="фото ui дизайнера" width="270">
                     <h3 lang="ru">Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <a href="/index.html">
+            WebStudio
+        </a>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26
+            <a href="mail:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:380961111111">+38 096 111 11 11</a>
+        </address>
+    </footer>
 </body>
 </html>
