--- a/index.html
+++ b/index.html
@@ -83,12 +83,10 @@
         </section>
     </main>
     <footer>
-        <a href="/index.html">
-            WebStudio
-        </a>
+        <a href="/index.html">WebStudio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26
-            <a href="mail:info@devstudio.com">info@devstudio.com</a>
+            г. Киев, пр-т Леси Украинки, 26 <br>
+            <a href="mail:info@devstudio.com">info@devstudio.com</a> <br>
             <a href="tel:380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
