--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
     <!--Шапка сайта-->
     <header>
         <a href="/index.html">
-        WebStudio
+        <p lang="en">WebStudio</p> 
         </a>
         <nav>
         <ul>
@@ -19,12 +19,18 @@
             <li><a href="">Контакты</a></li>
         </ul>
         </nav>
-        <a href="mail:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li>
+                <a href="mail:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </header>
     <main>
         <section>
-                <h1 lang="ru">Эффективные решения для вашего бизнеса</h1>
+                <h1>Эффективные решения для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
         </section>
         <section>
@@ -32,60 +38,72 @@
             <h2>Наши сильные качества</h2>
             <ul>
                 <li>
-                    <h3 lang="ru">Внимание к деталям</h3>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 lang="ru">Пунктуальность</h3>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 lang="ru">Планирование</h3>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 lang="ru">Современные технологии</h3>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <section>
-                <h2 lang="ru">Чем мы занимаемся</h2>
-                <img src="./images/image.jpg" alt="человек печатает" width="370">
-                <img src="./images/image-2.jpg" alt="человек с телефоном за компютером" width="370">
-                <img src="./images/image-3.jpg" alt="человек с планшетом" width="370">
+                <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li>
+                    <img src="./images/image.jpg" alt="человек печатает" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/image-2.jpg" alt="человек с телефоном за компютером" width="370" height="294">
+                </li>
+                <li>
+                    <img src="./images/image-3.jpg" alt="человек с планшетом" width="370" height="294">
+                </li>
+            </ul>
         </section>
         <section>
             <!--Наша Команда-->
-            <h2 lang="ru">Наша команда</h2>
+            <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/foto.jpg" alt="фото дизайнера" width="270">
-                    <h3 lang="ru">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <img src="./images/foto.jpg" alt="фото дизайнера" width="270" height="260">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/foto1.jpg" alt="фото девелопера" width="270">
-                    <h3 lang="ru">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <img src="./images/foto1.jpg" alt="фото девелопера" width="270" height="260">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/foto2.jpg" alt="фото маркетолога" width="270">
-                    <h3 lang="ru">Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <img src="./images/foto2.jpg" alt="фото маркетолога" width="270" height="260">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/foto3.jpg" alt="фото ui дизайнера" width="270">
-                    <h3 lang="ru">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <img src="./images/foto3.jpg" alt="фото ui дизайнера" width="270" height="260">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="/index.html">WebStudio</a>
+        <a href="/index.html">
+            <p lang="en">WebStudio</p> 
+        </a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26 <br>
+            <a href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4258152,30.5366192,16.56z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">
+                г. Киев, пр-т Леси Украинки, 26 
+            </a> <br>
             <a href="mail:info@devstudio.com">info@devstudio.com</a> <br>
             <a href="tel:380961111111">+38 096 111 11 11</a>
         </address>
